--- a/prensentation_en.html
+++ b/prensentation_en.html
@@ -118,7 +118,8 @@
   close();
 })();
 </script>
-</div></div><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-accueil_en page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div>
+    <div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-accueil_en page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Home</a>
 		<ul>
 			<li><a href="presentation.html">About us</a></li>
@@ -161,8 +162,7 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
-    <a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1564077070368-13 section-element paged-element page-prensentation page-prensentation_en page-link-active"><div data-silex-type="container" class="editable-style silex-id-1564077070365-12 container-element silex-element-content silex-container-content website-width prevent-draggable"><div data-silex-type="text" class="editable-style silex-id-1564077354121-24 text-element text-style-4"><div class="silex-element-content normal"><p>Le Karst constitue un objet hydrogéologique complexe 
+</ul></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1564077070368-13 section-element paged-element page-prensentation page-prensentation_en page-link-active"><div data-silex-type="container" class="editable-style silex-id-1564077070365-12 container-element silex-element-content silex-container-content website-width prevent-draggable"><div data-silex-type="text" class="editable-style silex-id-1564077354121-24 text-element text-style-4"><div class="silex-element-content normal"><p>Le Karst constitue un objet hydrogéologique complexe 
 qui nécessite des approches et des modèles dédiés et originaux. Le SNO 
 KARST a pour ambition de faire émerger des questions et avancées 
 scientifiques, spécifiquement en termes de modélisation des flux 
